# poly

./: .gitignore  README.md
sem3/: .gitignore
sem3/cvm/lab6/: 00.c  00.cpp  00.objdump  00.s  00.txt  00_ptr.c  6.txt  7.txt  Makefile  main.txt  raz.md
sem3/diskra/courseWork/: CMakeLists.txt
sem3/diskra/courseWork/src/: SmallArithmetic.cpp
sem3/diskra/lab2/: tz.md
sem3/diskra/lab2/include/: config.h  ui.h  zheg.h
sem3/oop/lab4/src/: main.cpp
sem3/oop/lab7/lab7.1/src/: triangle.cpp
sem3/oop/lab7/lab7.1/src/headers/: triangle.h
sem3/oop/lab8/: quest.md  report.md
sem3/oop/lab8/report/: appendix.tex  conclusion.tex  discription.tex  introduction.tex  main.out  main.toc  tasks.tex  title.tex
sem3/oop/lab8/src/: main.cpp  mainwindow.cpp
sem4/tgraph/: CMakeLists.txt
sem4/tgraph/common/distributions/: distribution.cpp  distribution.h  normal.cpp  normal.h
sem4/tgraph/common/graph/: dag_generator.cpp  dag_generator.h  graph.cpp  graph.h
sem4/tgraph/lab1/include/: route_counter.h  shimbel.h  ui.h
sem4/tgraph/lab1/src/: main.cpp  route_counter.cpp  shimbel.cpp  ui.cpp
sem4/tgraph/questions/: main.tex  settings.tex
sem4/tgraph/questions/quest/: 1.tex  10.tex  11.tex  12.tex  13.tex  14.tex  15.tex  16.tex  17.tex  18.tex  19.tex  2.tex  20.tex  21.tex  22.tex  23.tex  24.tex  25.tex  26.tex  27.tex  28.tex  29.tex  3.tex  30.tex  31.tex  32.tex  33.tex  34.tex  35.tex  4.tex  5.tex  6.tex  7.tex  8.tex  9.tex
